<resources>
    <string name="app_name">TurnAround</string>
    <string name="binding_error">Binding not initialized to reference the view.</string>
    <string name="sever_500_error_msg">정보를 불러오는 데 실패했어요.</string>
    <string name="null_point_exception">NullPointException occurs..</string>
    <string name="null_point_exception_detail_two_item">NullPointException occurs - %s : %s, %s : %s</string>
    <string name="null_img_uri">ImgUri Null 에러</string>
    <string name="title_home">홈</string>
    <string name="title_room">방타버스</string>
    <string name="title_activity">활동</string>
    <string name="title_my">마이</string>
    <string name="refresh_error">자동로그인이 만료되었습니다. 다시 로그인해주시기 바랍니다.</string>
    <string name="close_img_desc">닫기 버튼</string>
    <string name="close_tool_tip_img_desc">툴팁 닫기 버튼</string>
    <string name="market_url">https://play.google.com/store/apps/details?id=org.android.turnaround</string>
    <string name="null_point_exception_warning_dialog_argument">"WarningDialogFragment에 필요한 arguments에 안들어옴"</string>
    <string name="warning_delete_activity_title">진짜 활동을 삭제할까요?</string>
    <string name="warning_delete_activity_desc">실패한 활동으로 기록되지는 않아요</string>
    <string name="warning_delete_activity_cancel">아니요</string>
    <string name="warning_delete_activity_confirm">네! 삭제할게요</string>
    <string name="warning_cancel_activity_title">활동 취소</string>
    <string name="warning_cancel_activity_desc">지금까지 진행한 STEP이 초기화 돼요.\n활동을 취소하실 건가요?</string>
    <string name="warning_cancel_activity_cancel">아니요</string>
    <string name="warning_cancel_activity_confirm">네</string>
    <string name="warning_take_photo_again_title">다시 촬영</string>
    <string name="warning_take_photo_again_desc">활동 인증 사진을\n다시 촬영하실 건가요?</string>
    <string name="warning_take_photo_again_cancel">아니오</string>
    <string name="warning_take_photo_again_confirm">네</string>
    <string name="warning_skip_review_title">리뷰 작성을 건너 뛰실 건가요?</string>
    <string name="warning_skip_review_desc">리뷰는 [마이페이지 -> 나의리뷰] 에서\n작성하실 수 있어요!</string>
    <string name="warning_skip_review_cancel">아니요</string>
    <string name="warning_skip_review_confirm">네</string>
    <string name="warning_cancel_review_title">작성 취소</string>
    <string name="warning_cancel_review_desc">작성 중인 내용이 삭제돼요.\n리뷰 작성을 취소하실 건가요?</string>
    <string name="warning_cancel_review_cancel">아니요</string>
    <string name="warning_cancel_review_confirm">네</string>
    <string name="warning_withdraw_title">정말 떠나실려구요?</string>
    <string name="warning_withdraw_desc">방타버스와 함께 성장한\n당신의 생산적인 삶을 응원합니다</string>
    <string name="warning_withdraw_cancel">네, 떠날게요</string>
    <string name="warning_withdraw_confirm">아니요</string>
    <string name="warning_notification_title">활동 알람을 보내드릴까요?</string>
    <string name="warning_notification_desc">활동 알람은 언제든지\n[내정보 -> 설정]에서 변경가능해요</string>
    <string name="warning_notification_cancel">아니요</string>
    <string name="warning_notification_confirm">네! 동의할래요</string>
    <string name="warning_duplicate_login_title">다른 기기에서 로그인 중이에요</string>
    <string name="warning_duplicate_login_desc">다른 기기에서 로그아웃 하고\n현재 기기에서 로그인 할까요?</string>
    <string name="warning_duplicate_login_cancel">아니요</string>
    <string name="warning_duplicate_login_confirm">네</string>
    <string name="intro_img_desc">턴어라운드 로고</string>
    <string name="tutorial_skip">SKIP</string>
    <string name="tutorial_img_desc">튜토리얼 이미지</string>
    <string name="tutorial_next_img_desc">다음 튜토리얼</string>
    <string name="tutorial_kakao_login_img_desc">카카오 로그인</string>
    <string name="tutorial_1">지금 바로 내 방을 닮은\n방타버스로 입주하세요.</string>
    <string name="tutorial_2">집에서 하는 활동을 인증하고\n방타버스를 성장시켜요!</string>
    <string name="tutorial_3">활동에 필요한 키트를\n활동 시간 전까지 준비해 드릴게요.</string>
    <string name="not_valid_social_token_error">소셜로그인에 실패했습니다.</string>
    <string name="sign_up_title">프로필과 닉네임을\n알려주세요.</string>
    <string name="sign_up_profile">프로필</string>
    <string name="sign_up_profile_1_img_desc">회원가입 프로필 사진 1</string>
    <string name="sign_up_profile_2_img_desc">회원가입 프로필 사진 2</string>
    <string name="sign_up_profile_3_img_desc">회원가입 프로필 사진 3</string>
    <string name="sign_up_nickname">닉네임</string>
    <string name="sign_up_cancel_nickname_img_desc">닉네임 입력 취소</string>
    <string name="sign_up_nickname_hint">최대 8자 이내로 입력해주세요</string>
    <string name="sign_up_done">가입하기</string>
    <string name="sign_up_exist_nickname">중복된 닉네임이 존재합니다.</string>
    <string name="sign_up_valid_nickname">인증완료</string>
    <string name="sign_up_nickname_valid_check">중복확인</string>
    <string name="home_nickname">%s 님</string>
    <string name="home_level">Lv.%d</string>
    <string name="home_num_format">0%d</string>
    <string name="home_broom_count">개</string>
    <string name="home_score_count">점</string>
    <string name="home_room_background_img_desc">방 그림자</string>
    <string name="home_room_desc">작은방</string>
    <string name="home_view_more">더보기</string>
    <string name="home_todo_count">나의 활동(%d)</string>
    <string name="home_img_broom_desc">홈 빗자루 이미지</string>
    <string name="home_img_smile_desc">홈 점수 이미지</string>
    <string name="home_img_room_desc">홈 방 이미지</string>
    <string name="home_img_view_more_desc">홈 더보기 아이콘</string>
    <string name="home_no_todo_img_desc">활동 0개 이미지</string>
    <string name="home_no_todo">%s님! 반가워요.\n우리 집안일을 한번 해볼까요?</string>
    <string name="todo_event_img_back_desc">뒤로가기 이미지</string>
    <string name="todo_event_tool_bar_title">나의 활동</string>
    <string name="todo_event_img_setting_desc">일정 편집 버튼 이미지</string>
    <string name="todo_event_img_alarm_desc">전체 알림 끄기 이미지</string>
    <string name="todo_event_img_broom_desc">빗자루 이미지</string>
    <string name="todo_event_no_todo">예약한 활동이 없어요.\n첫번째 활동을 하러 가볼까요?</string>
    <string name="todo_event_go_activity">활동 하러 가기!</string>
    <string name="todo_event_todo_success">완료된 활동</string>
    <string name="todo_event_todo_today">오늘의 활동</string>
    <string name="todo_event_todo_this_week">이번주 활동</string>
    <string name="todo_event_todo_next">다음 활동</string>
    <string name="todo_edit_tool_bar_title">활동 편집</string>
    <string name="todo_edit_empty">편집할 활동이 없습니다</string>
    <string name="room_top_info_room_type">방 종류</string>
    <string name="room_top_info_furniture_count">가구 수</string>
    <string name="room_brush_img_desc">빗자루</string>
    <string name="room_brush_count_text">개</string>
    <string name="room_score_img_desc">방 점수</string>
    <string name="room_score_text">점</string>
    <string name="room_wall_img_desc">방타버스 벽</string>
    <string name="room_table_img_desc">방타버스 책상</string>
    <string name="room_window_img_desc">방타버스 창문</string>
    <string name="room_bed_img_desc">방타버스 침대</string>
    <string name="room_brush_table_img_desc">방타버스 책상 빗자루</string>
    <string name="room_brush_window_img_desc">방타버스 창문 빗자루</string>
    <string name="room_brush_bed_img_desc">방타버스 침대 빗자루</string>
    <string name="room_small_bedroom">작은방</string>
    <string name="room_furniture_count">%d개</string>
    <string name="room_level">Lv.%d</string>
    <string name="room_use_brush_error_toast">😅 빗자루를 다썼어요. 활동해 볼까요?</string>
    <string name="room_use_brush_success_toast">😆 빗자루를 사용해 가구를 청소했어요.</string>
    <string name="activity_title">생산적 활동</string>
    <string name="room_category_all_img_desc">활동 카테고리 전체</string>
    <string name="activity_category_all">전체</string>
    <string name="room_category_bed_img_desc">활동 카테고리 침구류</string>
    <string name="activity_category_bed">침구류</string>
    <string name="room_category_washing_machine_img_desc">활동 카테고리 세탁기</string>
    <string name="activity_category_washing_machine">세탁기</string>
    <string name="room_category_table_img_desc">활동 카테고리 책상</string>
    <string name="activity_category_table">책상</string>
    <string name="room_category_kitchen_img_desc">활동 카테고리 주방</string>
    <string name="activity_category_kitchen">주방</string>
    <string name="room_category_bathroom_img_desc">활동 카테고리 화장실</string>
    <string name="activity_category_bathroom">화장실</string>
    <string name="room_category_etc_img_desc">활동 카테고리 기타가구</string>
    <string name="activity_category_etc">기타가구</string>
    <string name="room_category_self_improvement_img_desc">활동 카테고리 자기계발</string>
    <string name="activity_category_self_improvement">자기계발</string>
    <string name="activity_img_desc">활동 사진</string>
    <string name="activity_type_free">FREE</string>
    <string name="activity_type_kit">KIT</string>
    <string name="activity_brush">활동 후 빗자루 리워드</string>
    <string name="bottom_sheet_todo_start_category_img_desc">활동 상세 카테고리 이미지</string>
    <string name="bottom_sheet_todo_start_broom_img_desc">활동 상세 빗자루 이미지</string>
    <string name="bottom_sheet_todo_start_broom">빗자루</string>
    <string name="bottom_sheet_todo_start_point_img_desc">활동 상세 활동 인증 이미지</string>
    <string name="bottom_sheet_todo_start_point">활동 인증 시</string>
    <string name="bottom_sheet_todo_start_reward_img_desc">활동 상세 보상 아이템 이미지</string>
    <string name="bottom_sheet_todo_start_reward">보상 아이템</string>
    <string name="bottom_sheet_todo_start_alarm_img_desc">활동 상세 알람 이미지</string>
    <string name="bottom_sheet_todo_start_alarm">활동 시간 알람</string>
    <string name="bottom_sheet_todo_start_btn_true">활동 시작하기!</string>
    <string name="bottom_sheet_todo_start_btn_false">활동 시간이 아니지만 바로 시작하기!</string>
    <string name="bottom_sheet_todo_reserve_title">활동을 언제 시작할까요?</string>
    <string name="bottom_sheet_todo_reserve_edit_title">활동을 언제로 변경할까요?</string>
    <string name="bottom_sheet_todo_reserve_data">날짜</string>
    <string name="bottom_sheet_todo_reserve_date_desc">2주보다 먼 미래에는 예약이 불가능 해요</string>
    <string name="bottom_sheet_todo_reserve_alarm">알림을 알려드릴까요?</string>
    <string name="bottom_sheet_todo_reserve_edit_alarm">활동 시간 알람</string>
    <string name="bottom_sheet_todo_reserve_duration">소요 시간</string>
    <string name="bottom_sheet_todo_reserve_btn">활동 예약 완료</string>
    <string name="bottom_sheet_todo_reserve_edit_btn">활동 변경 완료</string>
    <string name="bottom_sheet_todo_reserve_colon">:</string>
    <string name="todo_reserve_toast_msg_cannot_delete">수정/삭제 할 수 없는 일정입니다.</string>
    <string name="todo_reserve_toast_msg_success">⏰ 활동을 예약했어요!</string>
    <string name="todo_reserve_edit_toast_msg_success">🙂 활동이 변경되었어요!</string>
    <string name="todo_reserve_toast_msg_invalid_date">😥 예약 실패! 2주 뒤로는 예약을 못해요</string>
    <string name="todo_reserve_toast_msg_duplicate">😕 예약된 다른 활동과 겹치는 일정이에요!</string>
    <string name="my_title">마이페이지</string>
    <string name="my_profile_img_desc">마이페이지 프로필 이미지</string>
    <string name="my_point_img_desc">마이 페이지 포인트 아이콘</string>
    <string name="my_point">터닝 포인트</string>
    <string name="my_customer_center">고객센터 문의하기</string>
    <string name="my_right_arrow_img_desc">마이 페이지 더보기</string>
    <string name="my_review">스토어 리뷰 남기기</string>
    <string name="my_setting">설정</string>
    <string name="setting_title">설정</string>
    <string name="setting_back_img_desc">뒤로가기 이미지</string>
    <string name="setting_alarm">알림</string>
    <string name="setting_function">기능</string>
    <string name="setting_alarm_item">전체 푸시알림 동의</string>
    <string name="setting_function_item">약관 및 개인정보 활용</string>
    <string name="setting_withdrawal">회원탈퇴</string>
    <string name="setting_logout">로그아웃</string>
    <string name="settings_logout_toast">로그아웃되었습니다.</string>
    <string name="withdraw_toast">탈퇴되었습니다.</string>
    <string name="todo_guide_start">시작</string>
    <string name="todo_guide_start_img_dessc">활동 시작 이미지</string>
    <string name="todo_guide_done">오늘의 활동 인증하기!</string>
    <string name="todo_guide_done_img_dessc">활동 완료 이미지</string>
    <string name="todo_guide_done_title">활동을 완료하셨나요?</string>
    <string name="todo_guide_done_desc">진행하신 활동을 인증해보세요!</string>
    <string name="todo_guide_step">STEP %d</string>
    <string name="todo_guide_img_desc">가이드 사진</string>
    <string name="todo_guide_tool_tip_cheer_up">한단계 남았어요! 힘내서 활동을 완료해보세요!</string>
</resources>