<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="org.android.turnaround.presentation.setting.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/turnaround_gray_1">

        <TextView
            android:id="@+id/tv_setting_title"
            style="@style/body1_semi_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/turnaround_white"
            android:paddingVertical="16dp"
            android:text="@string/setting_title"
            android:textAlignment="center"
            android:textColor="@color/turnaround_gray_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_setting_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/setting_back_img_desc"
            android:padding="16dp"
            android:src="@drawable/ic_todo_event_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_setting_alarm"
            style="@style/body2_semi_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="22dp"
            android:text="@string/setting_alarm"
            android:textColor="@color/turnaround_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_setting_title" />

        <TextView
            android:id="@+id/tv_setting_alarm_item"
            style="@style/body1_regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/turnaround_white"
            android:paddingVertical="20dp"
            android:paddingStart="22dp"
            android:text="@string/setting_alarm_item"
            android:textColor="@color/turnaround_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_setting_alarm" />

        <com.suke.widget.SwitchButton
            android:id="@+id/switch_btn_setting"
            check="@{vm.setting.isAgreeNotification}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_setting_alarm_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_setting_alarm_item"
            app:sb_checked_color="@color/turnaround_purple"
            app:sb_checkline_color="@color/turnaround_purple"
            app:sb_checkline_width="0dp"
            app:sb_uncheck_color="@color/turnaround_gray_6"
            app:sb_uncheckcircle_radius="0dp"
            app:sb_uncheckcircle_width="0dp" />

        <TextView
            android:id="@+id/tv_setting_function"
            style="@style/body2_semi_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="22dp"
            android:text="@string/setting_function"
            android:textColor="@color/turnaround_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_setting_alarm_item" />

        <TextView
            style="@style/body1_regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/turnaround_white"
            android:paddingVertical="20dp"
            android:paddingStart="22dp"
            android:text="@string/setting_function_item"
            android:textColor="@color/turnaround_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_setting_function" />

        <View
            android:id="@+id/view_setting"
            android:layout_width="1dp"
            android:layout_height="14dp"
            android:layout_marginBottom="28dp"
            android:background="@color/turnaround_gray_6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_setting_logout"
            style="@style/caption_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->vm.postLogout()}"
            android:padding="10dp"
            android:text="@string/setting_logout"
            android:textColor="@color/turnaround_gray_7"
            app:layout_constraintBottom_toBottomOf="@id/view_setting"
            app:layout_constraintEnd_toStartOf="@id/view_setting"
            app:layout_constraintTop_toTopOf="@id/view_setting" />

        <TextView
            android:id="@+id/tv_setting_withdrawal"
            style="@style/caption_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/setting_withdrawal"
            android:textColor="@color/turnaround_gray_7"
            app:layout_constraintBottom_toBottomOf="@id/view_setting"
            app:layout_constraintStart_toEndOf="@id/view_setting"
            app:layout_constraintTop_toTopOf="@id/view_setting" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
