<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="org.android.turnaround.presentation.todo_edit.TodoEditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/turnaround_gray_1"
        tools:context=".presentation.my_todo.MyTodoActivity">

        <TextView
            android:id="@+id/tv_todo_edit_tool_bar_title"
            style="@style/body1_semi_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:text="@string/todo_edit_tool_bar_title"
            android:textAlignment="center"
            android:textColor="@color/turnaround_gray_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_todo_edit_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo_event_img_back_desc"
            android:padding="16dp"
            android:src="@drawable/ic_todo_event_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_todo_edit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/turnaround_gray_1"
            android:visibility="@{vm.isTodoExist ? View.VISIBLE : View.GONE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_todo_edit_tool_bar_title"
            tools:listitem="@layout/item_my_todo_white" />

        <TextView
            android:id="@+id/tv_todo_edit_empty"
            style="@style/body1_regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/todo_edit_empty"
            android:textColor="@color/turnaround_gray_6"
            android:visibility="@{vm.isTodoExist ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_todo_edit_tool_bar_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
